@@ -45,7 +45,7 @@ alias lomikel_pure='java -jar ../lib/Lomikel-${version}.exe.jar'
 alias lomikel_hbase='java -jar ../lib/Lomikel-HBase-${version}.exe.jar'
 alias lomikel_hadoop='java --add-opens java.base/java.lang=ALL-UNNAMED -jar ../lib/Lomikel-Hadoop-${version}.exe.jar'
 alias lomikel_janus='java -jar ../lib/Lomikel-Janus-${version}.exe.jar'
-alias lomikel_all='java -jar ../lib/Lomikel-All-${version}.exe.jar'
+alias lomikel_all='java --add-opens=java.base/java.lang=ALL-UNNAMED -jar ../lib/Lomikel-All-${version}.exe.jar'
 alias lomikel_dl4j='java --enable-preview -jar ../lib/Lomikel-dl4j-${version}.exe.jar'
 
 echo "commands: gremlin_console_Local, gremlin_console_IJCLab, gremlin_console_CC, gremlin_Local, gremlin_IJCLab, gremlin_CC, lomikel, lomikel_pure, lomikel_hbase, lomikel_hadoop, lomikel_janus, lomikel_all, lomikel_dl4j"
